--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    border: 2px solid gray;
+    /* border: 2px solid gray */
    background-color: var(--white);
    position: sticky;
    top: 0;
