--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,7 @@
    background-color: var(--white);
    position: sticky;
    top: 0;
+   z-index: 1000;
 }
 
 .navbar-logo{
@@ -72,3 +73,26 @@
 .menu-items{
     color: var(--grey);
 }
+.bottom-nav{
+   display: none;
+}
+
+@media only screen and (max-width: 800px) {
+
+    .navbar-search,
+    .airbnb-your-home
+    /* .navbar-logo, */
+    /* .navbar-profile */
+    {
+        display: none;
+    }
+    .bottom-nav{
+        display: block;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        border: 1px solid var(--grey);
+        box-shadow: 0 1px 2px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 5%);
+    }
+  }
